Contact/contact.css
body{
    background-image: url(../images/background.png);
    background-repeat: no-repeat;
    background-size: 1000rem;
    min-width: 1000px;
}
body{
    display: block;
}
ul.header {
    list-style-type: none;
    margin: -20px;
    height: 112px;
    /* width: 1; */
    margin-right:  -8px;
    overflow: hidden;
    background-color: rgb(52, 6, 78);
  }
  
  header ul li {
    float: right;
    font-size: 23px;
    
  }

  li a {
    display: block;
    color: white;
    text-align: center;
    padding: 39px 13px;
    text-decoration: none;
    
  }
  
  /* Change the link color to #111 (black) on hover */
 .header li a:hover {
    background-color: #777;
  }

  .leftAlign nav img{
    background-color: rgb(52, 6, 78);
      padding-top: 10px;
      height:110px;
      width: 250px;
      float:left;
  }
  
  .container {
      width: 970px;
      height: 1200px;
  }

  
  .container {
      margin-right: auto;
      width: 80%;
      margin-left: auto;
      padding-left: 15px;
      padding-right: 15px;
  }
  
  div {
      display: block;
  }
  
  body {
      -webkit-font-smoothing: antialiased;
  }
  
  body {
      font-family: "Source Sans Pro",Calibri,Candara,Arial,sans-serif;
      font-size: 15px;
      line-height: 1.42857143;
      color: #333333;
      background-color: #ffffff;
  }

  /* page header */
  .page-header {
    padding-bottom: 0;
    margin: 0px 0 20px;
    padding-top: 15px;
    border-bottom: 1px solid #eee;
}

.page-header {
    margin: 20px 0 0px;
}
  /* hr */
  hr {
    margin-top: 21px;
    margin-bottom: 21px;
    border: 1;
    border-top: 0px solid #e6e6e6;
}

hr {
    box-sizing: content-box;
    height: 0;
}

hr {
    display: block;
    unicode-bidi: isolate;
    margin-block-start: 0.5em;
    margin-block-end: 0.5em;
    margin-inline-start: auto;
    margin-inline-end: auto;
    overflow: hidden;
    /* border-style: inset; */
    /* border-width: 1px; */
}

/* breacrumb */
.breadcrumb>.active {
    color: #999999;
}

.breadcrumb>li {
    display: inline-block;
    margin-left: -30px;
    margin-top: -25px;
}
li {
    
    display: list-item;
    text-align: -webkit-match-parent;
    
   
}

.breadcrumb li a:hover {
    background-color:none;    
  }

.breadcrumb {
    padding: 0px 15px ;
    margin-bottom: 21px;
    height: 50px;
    list-style: none;
    background-color: #f5f5f5;
    border-radius: 0;
}

.breadcrumb>li+li:before {
    content: "/\00a0";
    padding: 0 5px;
    color: #cccccc;
    
}

*:before, *:after {
    
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.active{
    padding: 0px 15px; 
    padding-left: 15px;

}

.breadcrumb  li a {
    color: orange;
    text-align: center;
    text-decoration: none;
    padding-right: 0px;
  }

  .row {
    margin-left: -15px;
    margin-right: -15px;
}
.row::before{
    counter-reset: " ";
    display: table;
}
*::before{
    box-sizing: border-box;
}

.img-responsive, .thumbnail>img, .thumbnail a>img, .carousel-inner>.item>img, .carousel-inner>.item>a>img {
    display: block;
    height: 300px;
    width: 767px;
    max-width: 100%;
}

img {
    vertical-align: middle;
}
img {
    border: 0;
}

/* align box on 2 parts*/
.col-md-6 {
    width: 50%;
}
.col-md-6 {
    float: left;
    position: relative;
    min-height: 1px;
    padding-left: 15px;
    padding-right: 15px;
}

/* right box */
h2, .h2 {
    font-size: 32px;
    margin-bottom: 10.5px;
    font-family: "Source Sans Pro",Calibri,Candara,Arial,sans-serif;
    font-weight: 300;
    line-height: 1.1;
    color: inherit;
}

h2 {
    display: block;
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

.row::after{
    clear: both;
}
.row::after{
    content: " ";
    display: table;
}

/* this make 2 image and text to be horizontal each other */
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}


/* send request */
.col-md-8{
    width: 66.66666667%;
    background-color: white;
}
.col-md-8{
    float: left;
}

.col-md-8{
    position: relative;
    min-height: 1px;
    padding-left: 15px;
    padding-right: 15px;
}

h3{
    font-size: 26px;
}

h3{
    margin-top: 21px;
    margin-bottom: 10.5px;
}

h3{
    font-family: "Source Sans Pro",Calibri,Candara,Arial,sans-serif;
    font-weight: 300;
    line-height: 1.1;
    color: inherit;
}

h3 {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

/* form */
form{
    display: block;
    margin-top: 0em;
}
body {
    -webkit-font-smoothing: antialiased;
}


.form-group {
    margin-bottom: 15px;
}

.textarea.form-control{
    height: auto;
    overflow: auto;
    font: inherit;
    margin: 0;
}

textarea {
    -webkit-writing-mode: horizontal-tb !important;
    text-rendering: auto;
    letter-spacing: normal;
    word-spacing: normal;
    text-transform: none;
    text-indent: 0px;
    text-shadow: none;
    text-align: start;
    -webkit-appearance: textarea;
    -webkit-rtl-ordering: logical;
    flex-direction: column;
    cursor: text;
    white-space: pre-wrap;
    overflow-wrap: break-word;
    
}

.form-control {
    display: block;
    width: 100%;
    /* height: 43px; */
    padding: 10px 18px;
    font-size: 15px;
    line-height: 1.42857143;
    color: #333333;
    background-color: #ffffff;
    background-image: none;
    border: 1px solid #cccccc;
    border-radius: 0;
}
input{
    font-family: inherit;
}

input{
    font:inherit;
    margin: 0;
}

input {
    -webkit-writing-mode: horizontal-tb !important;
    text-rendering: auto;
    letter-spacing: normal;
    word-spacing: normal;
    text-transform: none;
    text-indent: 0px;
    text-shadow: none;
    text-align: start;
    -webkit-appearance: textfield;
    -webkit-rtl-ordering: logical;
    cursor: text;
}

.help-block {
    display: block;
    margin-top: 5px;
    margin-bottom: 10px;
    color: #737373;
}

/* button submit */
.btn {
    padding: 4px 18px;
}

.btn-primary {
    color: #ffffff;
    background-color: #2780e3;
    border-color: #2780e3;
}

.btn {
    display: inline-block;
    margin-bottom: 0;
    font-weight: normal;
    text-align: center;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    background-image: none;
    border: 1px solid transparent;
    white-space: nowrap;
    /* padding: 10px 18px; */
    font-size: 15px;
    line-height: 1.42857143;
    border-radius: 0;
    /* -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none; */
}

button{
    font-family: inherit;
}
button{
    -webkit-appearance: button;
}
button{
    text-transform: none;
    font: inherit;
    margin: 0;
}

.fa {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    /* -moz-osx-font-smoothing: grayscale; */
}

btn-primary {
    color: #ffffff;
}

.btn {
    display: inline-block;
    margin-bottom: 0;
    text-align: center;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    background-image: none;
    border: 1px solid transparent;
    white-space: nowrap;
    padding: 10px 18px;
    border-radius: 0;
    user-select: none;
}

/* .fa-send-o:before, .fa-paper-plane-o:before {
    content: "\f1d9";
} */

*:before, *:after {
    box-sizing: border-box;
}

.row::after{
    clear:both;
}
.row::after{
    content: " ";
    display: table;
}
.row::after{
    box-sizing: border-box;
}


/* footer align */
.col-lg-6{
    width: 50%;
    float: left;
}
.col-lg-6{
position: relative;
    min-height: 1px;
    padding-left: 15px;
    padding-right: 15px;
    margin-top: -10px;
}
.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
    position: relative;
    min-height: 1px;
    padding-left: 15px;
    padding-right: 15px;
}

.col-md-4{
    width: 33.333333333%;
    float: left;
}
*{
    box-sizing: border-box;
}

.text-right {
    text-align: right;
}


/* symbols for place */
@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: url(https://fonts.gstatic.com/s/materialicons/v50/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
  }
.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
  }

  .text-danger{
      color:#ff0039;
  }

 

